package com.zws.design.command.example1;

/**
 * 实际处理人
 * @author zhengws
 * @date 2019-09-06 15:57
 */
public interface Receiver {
    void action();
}
